-- Noteworthy changes in version 1.0.4 (2015-??-??)
o) Log timestamp format is ISO8601 now


-- Noteworthy changes in version 1.0.3 (2015-01-28)
o) Fixed bug where HOPM wouldn't try re-connecting to the server in
   case the connection got lost.
o) Added irc::notice configuration option


-- Noteworthy changes in version 1.0.2 (2015-01-12)
o) Added options::negcache_rebuild configuration option
o) Added basic IPv6 support allowing HOPM to bind and
   connect to IPv6 addresses
o) Many code cleanups and optimizations


-- Noteworthy changes in version 1.0.1 (2015-01-06)
o) Fixed build on OS X
o) More code cleanups, no user-visible changes


-- Noteworthy changes in version 1.0.0 (2015-01-03)
o) Minor stabilization and performance improvements


-- Noteworthy changes in version 1.0.0beta2 (2014-12-31)
o) Added irc::readtimeout configuration option
o) Many code cleanups and optimizations
o) Worked towards IPv6 support
o) Fixed reference.conf from causing syntax errors
o) hopm now uses poll() for I/O event notification instead of select()


-- Noteworthy changes in version 1.0.0beta1 (2014-12-25)
########################################################################
o) NOTE: this is the first release of the hybrid open proxy monitor (HOPM)
   fully based off the discontinued blitzed open proxy monitor (BOPM)
########################################################################
o) Modernized and cleaned up build system
o) Modernized the example configuration file. Removed/updated blacklist entries.
o) The configuration parser now does support time and size units
o) The configuration parser now does support c++ style comments
o) Fixed a memory leak in conjunction with manual scans
o) Fixed weird behaviour in the command parser
o) Code hardening. Replaced occurences of strcpy/strcat with strlcpy/strlcat, etc.
o) Various code cleanups and optimizations
o) The irc::away configuration option is now optional

