@@ -70,7 +70,9 @@ botnick check <host> [scanner]  -- Manually scan host for insecure proxies and o
 
 botnick stats                   -- Output scan stats, uptime and client connection count.
 
-botnick fdstat                  -- Output some into about file descriptors in use.
+botnick fdstat                  -- Output some info about file descriptors in use.
+
+botnick protocols               -- Output configured scanners and their associated protocols/ports.
 
 Also if several HOPMs are present in one channel they will all respond to !all,
 for example !all stats.
