@@ -1,5 +1,7 @@
 -- Noteworthy changes in version 1.0.4 (2015-??-??)
 o) Log timestamp format is ISO8601 now
+o) Added 'protocols' command which dumps a list of configured scanners
+   and their associated protocols/ports to a channel
 
 
 -- Noteworthy changes in version 1.0.3 (2015-01-28)
